Implemented few optimization and added some styling

--- a/KrontecDemo/Views/Customer/Index.cshtml
+++ b/KrontecDemo/Views/Customer/Index.cshtml
@@ -24,8 +24,8 @@
                 <td>@customer.PhoneNumber</td>
                 <td>@customer.Address</td>
                 <td>
-                    <a href="/Customer/Edit/@customer.CustomerId">Edit</a> |
-                    <a href="/Customer/Delete/@customer.CustomerId">Delete</a>
+                    <a href="/Customer/Edit/@customer.CustomerId" class="btn btn-primary">Edit</a>
+                    <a href="/Customer/Delete/@customer.CustomerId" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
         }
